--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title></title>
 </head>
 <body>
-<img class="logo" src="img/logo.png">
+<div class="first_past"><div><img  class="logo" src="img/logo.png" a name="top"></img></div>
 <div class="manual">HOME PRODUCTS SERVICE WORD PRICING CONTACT</div>
 <div class="underline"></div>
 <p class="product_add">Digital Product Agency</p>
@@ -38,7 +38,19 @@
 	quis nostrud exercitation</p>
 	<h3 class="h3_text7">Read More</h3>
 	</div>
+	</div>
 </div>
-
+<a name="top"></a>
+<div class="container">
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div>
+    	<h5 class="results_showing2">Displaying The Results</h5>
+    	<p class="product_text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    	<p class="product_text3"> sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p></div>
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <a class="btn_top" href="#top">TOP</a>
+</div>
 </body>
 </html>
