--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 	tempor incididunt ut labore et dolore magna aliqua. <p class="h3_textabout">Ut enim ad minim veniam,
 	quis nostrud exercitation</p></h2>
 	<h3 class="workspace">Workspace<span class="h3_text2">Managment</span></h3>
-	<div class="block1"><img class="img01" src="img/01.jpg">
+	<div class="block1"><img class="img01" src="img/galery1.jpg">
 		<p class="img_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation</p>
 	<h3 class="h3_text3">Read More</h3>
 	</div>
 	<h3 class="minimalism">Minimalism<span class="h3_text5">Developmeny</span></h3>
-	<div class="block2"><img class="img02" src="img/02.jpg">
+	<div class="block2"><img class="img02" src="img/galery2.jpg">
 		<p class="img_text2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation</p>
 	<h3 class="h3_text4">Read More</h3>
 	</div>
 	<h3 class="cleantstyle">Cleant style<span class="h3_text6">Design</span></h3>
-	<div class="block3"><img class="img03" src="img/03.jpg">
+	<div class="block3"><img class="img03" src="img/galery3.jpg">
 		<p class="img_text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation</p>
@@ -50,6 +50,14 @@
     <div class="box3"></div>
     <div class="box4"></div>
     <a class="btn_top" href="#top">TOP</a>
+</div>
+<div class="galery">
+	<img class="foto1" src="img/01.jpg">
+	<img class="foto2" src="img/02.jpg">
+	<p><img class="foto3" src="img/03.jpg"></p>
+	<img class="foto4" src="img/galery1.jpg">
+	<p><img class="foto5" src="img/galery2.jpg"></p>
+
 </div>
 </body>
 </html>
