--- a/index.html
+++ b/index.html
@@ -57,7 +57,56 @@
 	<p><img class="foto3" src="img/03.jpg"></p>
 	<img class="foto4" src="img/galery1.jpg">
 	<p><img class="foto5" src="img/galery2.jpg"></p>
-
+</div>
+<div class="cards">
+<div class="card_started">
+	<img src="img/flask.png" class="card_img1">
+	<p class="starter_kit"><h3 class="starter_kit">Stater Kit<span class="price">- $</span>49</h3></p>
+	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua.</p>
+	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
+	<p class="card_levels"><img src="img/minus.png">Up to 5 products</p>
+	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
+	<a href="#" class="button">
+		<span class="button__line button__line--top"></span>
+		<span class="button__line button__line--right"></span>
+		<span class="button__line button__line--bottom"></span>
+		<span class="button__line button__line--left"></span>
+		CHOOSE
+	</a>
+	</div>
+	<div class="card_started2">
+	<img src="img/eyeglasses.png" class="card_img1">
+	<p class="starter_kit"><h3 class="starter_kit">Proffesional<span class="price">- $</span>149</h3></p>
+	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua.</p>
+	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
+	<p class="card_levels"><img src="img/minus.png">Up 5 to 150 products</p>
+	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
+	<a href="#" class="button">
+		<span class="button__line button__line--top"></span>
+		<span class="button__line button__line--right"></span>
+		<span class="button__line button__line--bottom"></span>
+		<span class="button__line button__line--left"></span>
+		CHOOSE
+	</a>
+	</div>
+	<div class="card_started3">
+	<img src="img/triangle.png" class="card_img1">
+	<p class="starter_kit"><h3 class="starter_kit">Advanced<span class="price">- $</span>249</h3></p>
+	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua.</p>
+	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
+	<p class="card_levels"><img src="img/minus.png">Up 150 to 350 products</p>
+	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
+	<a href="#" class="button">
+		<span class="button__line button__line--top"></span>
+		<span class="button__line button__line--right"></span>
+		<span class="button__line button__line--bottom"></span>
+		<span class="button__line button__line--left"></span>
+		CHOOSE
+	</a>
+	</div>
 </div>
 </body>
 </html>
