--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
 		CHOOSE
 	</a>
 	</div>
+	<div class="cards2">
+		<h3 class="starter_kit2">Costomer Reviews</h3>
+		<p class="reviews_text"><span class="span">"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<p class="reviews_text"> sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p><p class="reviews_text">
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. </p>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52972.7729073196!2d-118.4059760521186!3d33.920590229794385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b6b3cc89c9ad%3A0xa43b1f1824d7a596!2sLos%20Angeles%20Lakers!5e0!3m2!1sru!2sua!4v1614355832793!5m2!1sru!2sua" width="2000" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+	</div>
+	<div class="footer"></div>
+	<div class="underline2"></div>
+	<div class="social">
+	<img src="img/instagram.png">
+	<img src="img/facebook.png">
+	<img src="img/telegram.png">
+	</div>
+	<div class="manual2">HOME PRODUCTS SERVICE WORD PRICING CONTACT</div>
 </div>
 </body>
 </html>
