--- a/index.html
+++ b/index.html
@@ -6,123 +6,56 @@
 	<title></title>
 </head>
 <body>
-<div class="first_past"><div><img  class="logo" src="img/logo.png" a name="top"></img></div>
-<div class="manual">HOME PRODUCTS SERVICE WORD PRICING CONTACT</div>
-<div class="underline"></div>
-<p class="product_add">Digital Product Agency</p>
-<h3 class="product_text">Look no further. You came to the right ... place</h3>
-<div class="video_block"><p class="f">g</p><img src="img/triangle.png">WATCH INTRO VIDEO</div>
-<div class="second_past">
-	<h3 class="product_h3">Latest Product</h3>
-	<h2 class="h3_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. <p class="h3_textabout">Ut enim ad minim veniam,
-	quis nostrud exercitation</p></h2>
-	<h3 class="workspace">Workspace<span class="h3_text2">Managment</span></h3>
-	<div class="block1"><img class="img01" src="img/galery1.jpg">
-		<p class="img_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation</p>
-	<h3 class="h3_text3">Read More</h3>
+	<div class="countainer">
+		<img class="logo" src="img/logo.png">
+		<div class="navigation"><span class="a">Головна</span><span class="a">Країни</span><span class="a">Поради</span><span class="a">Сайт</span></div>
 	</div>
-	<h3 class="minimalism">Minimalism<span class="h3_text5">Developmeny</span></h3>
-	<div class="block2"><img class="img02" src="img/galery2.jpg">
-		<p class="img_text2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation</p>
-	<h3 class="h3_text4">Read More</h3>
+	<div class="top">
+		<div class="topblock1">
+		<img class="travel" src="img/travel.png">
+		<p class="traveltext">Якщо ви молоді, здорові і жадаєте дізнаватися нове, то я вас заклинаю - подорожуйте. І їдьте так далеко, наскільки це можливо.<span class="anthoni">Антоні Бордіан</p>
 	</div>
-	<h3 class="cleantstyle">Cleant style<span class="h3_text6">Design</span></h3>
-	<div class="block3"><img class="img03" src="img/galery3.jpg">
-		<p class="img_text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation</p>
-	<h3 class="h3_text7">Read More</h3>
+	<img class="suitcase" src="img/suitcase.png">
 	</div>
-	</div>
-</div>
-<div class="container">
-    <div class="box1"></div>
-    <div class="box2"></div>
-    <div>
-    	<h5 class="results_showing2">Displaying The Results</h5>
-    	<p class="product_text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    	<p class="product_text3"> sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p></div>
-    <div class="box3"></div>
-    <div class="box4"></div>
-    <a class="btn_top" href="#top">TOP</a>
-</div>
-<div class="galery">
-	<img class="foto1" src="img/01.jpg">
-	<img class="foto2" src="img/02.jpg">
-	<p><img class="foto3" src="img/03.jpg"></p>
-	<img class="foto4" src="img/galery1.jpg">
-	<p><img class="foto5" src="img/galery2.jpg"></p>
-</div>
-<div class="cards">
-<div class="card_started">
-	<img src="img/flask.png" class="card_img1">
-	<p class="starter_kit"><h3 class="starter_kit">Stater Kit<span class="price">- $</span>49</h3></p>
-	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua.</p>
-	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
-	<p class="card_levels"><img src="img/minus.png">Up to 5 products</p>
-	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
-	<a href="#" class="button">
-		<span class="button__line button__line--top"></span>
-		<span class="button__line button__line--right"></span>
-		<span class="button__line button__line--bottom"></span>
-		<span class="button__line button__line--left"></span>
-		CHOOSE
-	</a>
-	</div>
-	<div class="card_started2">
-	<img src="img/eyeglasses.png" class="card_img1">
-	<p class="starter_kit"><h3 class="starter_kit">Proffesional<span class="price">- $</span>149</h3></p>
-	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua.</p>
-	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
-	<p class="card_levels"><img src="img/minus.png">Up 5 to 150 products</p>
-	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
-	<a href="#" class="button">
-		<span class="button__line button__line--top"></span>
-		<span class="button__line button__line--right"></span>
-		<span class="button__line button__line--bottom"></span>
-		<span class="button__line button__line--left"></span>
-		CHOOSE
-	</a>
-	</div>
-	<div class="card_started3">
-	<img src="img/triangle.png" class="card_img1">
-	<p class="starter_kit"><h3 class="starter_kit">Advanced<span class="price">- $</span>249</h3></p>
-	<p class="started_kit_diskription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua.</p>
-	<p class="card_levels"><img src="img/minus.png">Basic Features</p>
-	<p class="card_levels"><img src="img/minus.png">Up 150 to 350 products</p>
-	<p class="card_levels"><img src="img/minus.png">50 users panel</p>
-	<a href="#" class="button">
-		<span class="button__line button__line--top"></span>
-		<span class="button__line button__line--right"></span>
-		<span class="button__line button__line--bottom"></span>
-		<span class="button__line button__line--left"></span>
-		CHOOSE
-	</a>
-	</div>
-	<div class="cards2">
-		<h3 class="starter_kit2">Costomer Reviews</h3>
-		<p class="reviews_text"><span class="span">"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<p class="reviews_text"> sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p><p class="reviews_text">
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. </p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52972.7729073196!2d-118.4059760521186!3d33.920590229794385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b6b3cc89c9ad%3A0xa43b1f1824d7a596!2sLos%20Angeles%20Lakers!5e0!3m2!1sru!2sua!4v1614355832793!5m2!1sru!2sua" width="2000" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-	</div>
-	<div class="footer"></div>
-	<div class="underline2"></div>
-	<div class="social">
-	<img src="img/instagram.png">
-	<img src="img/facebook.png">
-	<img src="img/telegram.png">
-	</div>
-	<div class="manual2">HOME PRODUCTS SERVICE WORD PRICING CONTACT</div>
-</div>
+	<div class="aboutweare">
+		<h3 class="b">Про нас</h3>
+		<div class="block"></div>
+		<div class="text">
+		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu. Aliquam vel imperdet mi, et convallis eros. Duis fermentum fringilla nisl at vulputate. Nunc nec lorem faucibus
+		molestie nisi id, elementum sem. Sed vulputate tempor augue a efficitur urna, ultrices eu.</p>
+	
+		
+		<p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+		<img class="paris" src="img/paris.png">
+		<h3 class="b2">Чому важливо подорожувати</h3>
+		<div class="block"></div>
+		<div class="text1">
+		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu. Aliquam vel imperdet mi, et convallis eros. Duis fermentum fringilla nisl at vulputate. Nunc nec lorem faucibus
+		molestie nisi id, elementum sem. Sed vulputate tempor augue a efficitur urna, ultrices eu.</p>
+	
+		
+		<p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+		<div><img class="sircle" src="img/sircle.png"></div>
+		<div class="b3">Відомі цитати</div>
+		<div class="block2"></div>
+		<div class="text2">
+		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu.</p>
+		<img class="arrows" src="img/left-arrow.png">
+		<img class="elis" src="img/elis.jpg">
+		<p class="bio">Jacques Élisée Reclus</p>
+		<img class="arrows2" src="img/right-arrow.png">
+		<div class="c">
+		<div class="level"></div>
+		<div class="levelblue"></div>
+		<div class="level1"></div>
+		<div class="level2"></div>
+		</div>
+		<div class="fly">
+		<div class="navigation"><span class="a">Головна</span><span class="a">Країни</span><span class="a">Поради</span><span class="a">Сайт</span></div>
+		<img class="" src="img/fly.png"></div>
 </body>
 </html>
