--- a/index.html
+++ b/index.html
@@ -8,54 +8,141 @@
 <body>
 	<div class="countainer">
 		<img class="logo" src="img/logo.png">
+		<img class="active" src="img/border.png">
 		<div class="navigation"><span class="a">Головна</span><span class="a">Країни</span><span class="a">Поради</span><span class="a">Сайт</span></div>
 	</div>
 	<div class="top">
 		<div class="topblock1">
 		<img class="travel" src="img/travel.png">
-		<p class="traveltext">Якщо ви молоді, здорові і жадаєте дізнаватися нове, то я вас заклинаю - подорожуйте. І їдьте так далеко, наскільки це можливо.<span class="anthoni">Антоні Бордіан</p>
+		<p class="traveltext">Якщо ви молоді, здорові і жадаєте дізнаватися нове, то я вас заклинаю - подорожуйте. І їдьте так далеко, наскільки це можливо.<span class="anthoni">АнтоніБордіан</p>
+			<div class="bottom"><p class="advices">Поради</p></div>
 	</div>
 	<img class="suitcase" src="img/suitcase.png">
 	</div>
 	<div class="aboutweare">
-		<h3 class="b">Про нас</h3>
+		<h3 class="b">Чек лист "Travel"</h3>
 		<div class="block"></div>
 		<div class="text">
 		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu. Aliquam vel imperdet mi, et convallis eros. Duis fermentum fringilla nisl at vulputate. Nunc nec lorem faucibus
 		molestie nisi id, elementum sem. Sed vulputate tempor augue a efficitur urna, ultrices eu.</p>
-	
-		
-		<p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-		<img class="paris" src="img/paris.png">
-		<h3 class="b2">Чому важливо подорожувати</h3>
-		<div class="block"></div>
-		<div class="text1">
-		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu. Aliquam vel imperdet mi, et convallis eros. Duis fermentum fringilla nisl at vulputate. Nunc nec lorem faucibus
-		molestie nisi id, elementum sem. Sed vulputate tempor augue a efficitur urna, ultrices eu.</p>
-	
-		
-		<p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-		<div><img class="sircle" src="img/sircle.png"></div>
-		<div class="b3">Відомі цитати</div>
-		<div class="block2"></div>
-		<div class="text2">
-		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu.</p>
-		<img class="arrows" src="img/left-arrow.png">
-		<img class="elis" src="img/elis.jpg">
-		<p class="bio">Jacques Élisée Reclus</p>
-		<img class="arrows2" src="img/right-arrow.png">
-		<div class="c">
-		<div class="level"></div>
-		<div class="levelblue"></div>
-		<div class="level1"></div>
-		<div class="level2"></div>
+		<div class="main">
+		<div><img class="checkbox1" src="img/rectangle.png">
+			<ol class="checklist">
+				<li>За день:</li>
+			<ul>
+				<li>Роздрукувати білети</li>
+				<li>Перевірити Погоду </li>
+				<li>скачати карти </li>
+				<li>Зібрати валізу </li>
+				<li>Скачати книги в дорогу</li>
+				<li>Зарядити Гаджети</li>
+				<li>Купити та роздрукувати страхівку</li>
+				<li>Очистити пам'ять телефону або камери</li>
+				<li>Планування дороги з готелю до аеропорту</li>
+				<li>скачати карти </li>
+				<li>Зібрати валізу </li>
+				<li>Скачати книги в дорогу</li>
+			</ul>
 		</div>
-		<div class="fly">
-		<div class="navigation"><span class="a">Головна</span><span class="a">Країни</span><span class="a">Поради</span><span class="a">Сайт</span></div>
-		<img class="" src="img/fly.png"></div>
+		<div><img class="checkbox2" src="img/rectangle.png">
+			<ol class="checklist2">
+				<li>Важливо:</li>
+			<ul>
+				<li>Паспорт</li>
+				<li>Білети</li>
+				<li>Бронювання</li>
+				<li>Гаманець</li>
+				<li>Валіза</li>
+				<li>Телефон</li>
+				<li>Навушники</li>
+				<li>Зарядка</li>
+				<li>Фігурка Свинки пеппи(Талісман тіпа):D</li>
+			</ul>
+		</div>
+		<div><img class="checkbox3" src="img/rectangle.png">
+			<ol class="checklist3">
+				<li>Косметика</li>
+			<ul>
+				<li>Духи</li>
+				<li>Дезодорант</li>
+				<li>Бритва Та засоби для бриття</li>
+				<li>Фен </li>
+				<li>Гребінець</li>
+				<li>Шампунь</li>
+				<li>Ножнички</li>
+				<li>Резинки для волосся</li>
+				<li>Сонцезахисні засоби</li>
+				<li>Креми</li>
+				<li>Зубна Паста та щітка</li>
+				<li>маски</li>
+			</ul>
+		</div>
+		</div>
+		<div class="mainpart2">
+		<div><img class="checkbox1" src="img/rectangle.png">
+			<ol class="checklist">
+				<li>Перед виходом з дому:</li>
+			<ul>
+				<li>Відключити всі пристрої</li>
+				<li>Перекрити воду</li>
+				<li>Перевірити наявність усіх речей</li>
+				<li>Полити квіти</li>
+				<li>Перекласти продукти з холодильника</li>
+				<li>Зарядити Гаджети</li>
+				<li>Купити та роздрукувати страхівку</li>
+				<li>Очистити пам'ять телефону або камери</li>
+				<li>Планування дороги з готелю до аеропорту</li>
+				<li>скачати карти </li>
+				<li>Зібрати валізу </li>
+				<</li>
+			</ul>
+		</div>
+		<div><img class="checkbox4" src="img/rectangle.png">
+			<ol class="checklist4">
+				<li>Важливо:</li>
+			<ul>
+				<li>Паспорт</li>
+				<li>Білети</li>
+				<li>Бронювання</li>
+				<li>Гаманець</li>
+				<li>Валіза</li>
+				<li>Телефон</li>
+				<li>Навушники</li>
+				<li>Зарядка</li>
+				<li>Фігурка Свинки пеппи(Талісман тіпа):D</li>
+			</ul>
+		</div>
+		<div><img class="checkbox3" src="img/rectangle.png">
+			<ol class="checklist3">
+				<li>Косметика</li>
+			<ul>
+				<li>Духи</li>
+				<li>Дезодорант</li>
+				<li>Бритва Та засоби для бриття</li>
+				<li>Фен </li>
+				<li>Гребінець</li>
+				<li>Шампунь</li>
+				<li>Ножнички</li>
+				<li>Резинки для волосся</li>
+				<li>Сонцезахисні засоби</li>
+				<li>Креми</li>
+				<li>Зубна Паста та щітка</li>
+				<li>маски</li>
+			</ul>
+		</div>
+		<div><img class="checkbox5" src="img/rectangle.png">
+			<ol class="checklist5">
+				<li>Гаджети:</li>
+			<ul>
+				<li>Телефон</li>
+				<li>Навушники</li>
+				<li>PowerBank</li>
+				<li>Камера</li>
+				<li>Адаптер</li>
+				<li>Телефон</li>
+				<li>Навушники</li>
+			</ul>
+		</div>
+		</div>
 </body>
 </html>
