--- a/index.html
+++ b/index.html
@@ -2,147 +2,99 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/style.css">
-	<title></title>
+	<link rel="shortcut icon" href="img/logo.png" type="image/png">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/1page.css">
+	<title>-I ЕКОЛОГІЯ I-</title>
 </head>
 <body>
-	<div class="countainer">
-		<img class="logo" src="img/logo.png">
-		<img class="active" src="img/border.png">
-		<div class="navigation"><span class="a">Головна</span><span class="a">Країни</span><span class="a">Поради</span><span class="a">Сайт</span></div>
+	<div class="header">
+		<div>
+		 <img class="plant" src="img/plant_1.png">
+		<nav class="nav"><span class="navcapitan">Головна</span> Дослідження Людина-природа
+			<div class="button">
+		<a href="index.html" class="y">Вирішення</a>
+		</div>
+		</nav>
+		<div>
+		<p class="h3">Екологія</p>
+		<p class="h32">планети Земля</p>
+		</div>
 	</div>
-	<div class="top">
-		<div class="topblock1">
-		<img class="travel" src="img/travel.png">
-		<p class="traveltext">Якщо ви молоді, здорові і жадаєте дізнаватися нове, то я вас заклинаю - подорожуйте. І їдьте так далеко, наскільки це можливо.<span class="anthoni">АнтоніБордіан</p>
-			<div class="bottom"><p class="advices">Поради</p></div>
 	</div>
-	<img class="suitcase" src="img/suitcase.png">
+		<main class="main">
+			<div class="vertline"></div>
+		<div class="countainer">
+			<div class="col1"></div>
+			<div class="col1">
+				<p class="q">Про</p>
+				<p>Проект</p>
+			</div>
+			<div class="col1">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. 
+				</p>
+				<div class="vertline2"></div>
+			</div>
+			<div class="col1">
+				<p class="h4">Ми можемо</p>
+				<p class="h4">Зберегти</p>
+				<p class="h4">Нашу планету</p>
+			</div>
+		</div>
+		<div class="onto">
+			<h3 class="h6">Онтологія відносин<p class="h7"> "людина-природа"</p></h3>
+			<div class="ontoline"></div>
+			<div class="ontoline2">
+				<div class="sircle1"></div>
+				<div class="sircle1"></div>
+				<div class="sircle1"></div>
+				<p class="first">450<p class="h10">Традиційне <p class="h10">суспільство</p></p></p>
+				<div class="do">
+				<p class="first">1820<p class="h10">Індустріальне <p class="h10">суспільство</p></p></p></div>
+				<div class="do2">
+				<p class="first">1980<p class="h10">Традиційне <p class="h10">суспільство</p></p></p></div>
+		</div>
+		<div class="button1"><a href="index.html" class="y1">детальніше</a></div>
+		<div class="famous">
+				<div class="first"><img class="rec8" src="img/rectangle7.png"><p class="h10">Микола<p class="h10">Вернадський</p><div class="h14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></p>
+				</div>
+				<div class="first"><img class="rec8" src="img/rectangle9.png"><p class="h10">Нікола<p class="h10">Тесла</p><div class="h14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></p></div>
+				<div class="first"><img class="rec8" src="img/rectangle8.png"><p class="h10">Ілон<p class="h10">Маск</p></p><div class="h142">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></div>
+				<div class="first"><p class="h19">Відомі<p class="h19">Люди<div class="h9">Боротьба з екологічними проблемами</div></p></p></div>
+		</div>
+		</div>
+	</main>
 	</div>
-	<div class="aboutweare">
-		<h3 class="b">Чек лист "Travel"</h3>
-		<div class="block"></div>
-		<div class="text">
-		<p>Aliquam sodales vitae ex tincidunt consectetur. Etiam eleifend malesuada magna, atimperdiet justo euismod eu. Aliquam vel imperdet mi, et convallis eros. Duis fermentum fringilla nisl at vulputate. Nunc nec lorem faucibus
-		molestie nisi id, elementum sem. Sed vulputate tempor augue a efficitur urna, ultrices eu.</p>
-		<div class="main">
-		<div><img class="checkbox1" src="img/rectangle.png">
-			<ol class="checklist">
-				<li>За день:</li>
-			<ul>
-				<li>Роздрукувати білети</li>
-				<li>Перевірити Погоду </li>
-				<li>скачати карти </li>
-				<li>Зібрати валізу </li>
-				<li>Скачати книги в дорогу</li>
-				<li>Зарядити Гаджети</li>
-				<li>Купити та роздрукувати страхівку</li>
-				<li>Очистити пам'ять телефону або камери</li>
-				<li>Планування дороги з готелю до аеропорту</li>
-				<li>скачати карти </li>
-				<li>Зібрати валізу </li>
-				<li>Скачати книги в дорогу</li>
-			</ul>
-		</div>
-		<div><img class="checkbox2" src="img/rectangle.png">
-			<ol class="checklist2">
-				<li>Важливо:</li>
-			<ul>
-				<li>Паспорт</li>
-				<li>Білети</li>
-				<li>Бронювання</li>
-				<li>Гаманець</li>
-				<li>Валіза</li>
-				<li>Телефон</li>
-				<li>Навушники</li>
-				<li>Зарядка</li>
-				<li>Фігурка Свинки пеппи(Талісман тіпа):D</li>
-			</ul>
-		</div>
-		<div><img class="checkbox3" src="img/rectangle.png">
-			<ol class="checklist3">
-				<li>Косметика</li>
-			<ul>
-				<li>Духи</li>
-				<li>Дезодорант</li>
-				<li>Бритва Та засоби для бриття</li>
-				<li>Фен </li>
-				<li>Гребінець</li>
-				<li>Шампунь</li>
-				<li>Ножнички</li>
-				<li>Резинки для волосся</li>
-				<li>Сонцезахисні засоби</li>
-				<li>Креми</li>
-				<li>Зубна Паста та щітка</li>
-				<li>маски</li>
-			</ul>
-		</div>
-		</div>
-		<div class="mainpart2">
-		<div><img class="checkbox1" src="img/rectangle.png">
-			<ol class="checklist">
-				<li>Перед виходом з дому:</li>
-			<ul>
-				<li>Відключити всі пристрої</li>
-				<li>Перекрити воду</li>
-				<li>Перевірити наявність усіх речей</li>
-				<li>Полити квіти</li>
-				<li>Перекласти продукти з холодильника</li>
-				<li>Зарядити Гаджети</li>
-				<li>Купити та роздрукувати страхівку</li>
-				<li>Очистити пам'ять телефону або камери</li>
-				<li>Планування дороги з готелю до аеропорту</li>
-				<li>скачати карти </li>
-				<li>Зібрати валізу </li>
-				<</li>
-			</ul>
-		</div>
-		<div><img class="checkbox4" src="img/rectangle.png">
-			<ol class="checklist4">
-				<li>Важливо:</li>
-			<ul>
-				<li>Паспорт</li>
-				<li>Білети</li>
-				<li>Бронювання</li>
-				<li>Гаманець</li>
-				<li>Валіза</li>
-				<li>Телефон</li>
-				<li>Навушники</li>
-				<li>Зарядка</li>
-				<li>Фігурка Свинки пеппи(Талісман тіпа):D</li>
-			</ul>
-		</div>
-		<div><img class="checkbox3" src="img/rectangle.png">
-			<ol class="checklist3">
-				<li>Косметика</li>
-			<ul>
-				<li>Духи</li>
-				<li>Дезодорант</li>
-				<li>Бритва Та засоби для бриття</li>
-				<li>Фен </li>
-				<li>Гребінець</li>
-				<li>Шампунь</li>
-				<li>Ножнички</li>
-				<li>Резинки для волосся</li>
-				<li>Сонцезахисні засоби</li>
-				<li>Креми</li>
-				<li>Зубна Паста та щітка</li>
-				<li>маски</li>
-			</ul>
-		</div>
-		<div><img class="checkbox5" src="img/rectangle.png">
-			<ol class="checklist5">
-				<li>Гаджети:</li>
-			<ul>
-				<li>Телефон</li>
-				<li>Навушники</li>
-				<li>PowerBank</li>
-				<li>Камера</li>
-				<li>Адаптер</li>
-				<li>Телефон</li>
-				<li>Навушники</li>
-			</ul>
-		</div>
-		</div>
+	<div class="mainpt2">
+		<h3 class="whyisit">Чому<span class="span1"> це</span><span class="span2"> так?</span></h3>
+		<div class="imag"><img class="imag" src="img/onder.png"></div>
+		<div class="imag"><img class="imag1" src="img/tttv.png"></div>
+	</div>
+	<footer class="footer">
+		<p class="footertext">
+		Екологія планети Земля
+		</p>
+		<div class="social">
+		<img class="teleg" src="img/telegram.png">
+		<img src="img/twitter.png">
+	</footer>
 </body>
 </html>
