--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><span class="navcapitan">Головна</span> Дослідження Людина-природа
+		<nav class="nav"><span class="navcapitan">Головна</span> <a href="2page.html" class="g">дослідження</a> Людина-природа
 			<div class="button">
 		<a href="index.html" class="y">Вирішення</a>
 		</div>
