--- a/2page.html
+++ b/2page.html
@@ -12,7 +12,7 @@
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav">Головна<span class="navcapitan">Дослідження</span> ЛЮДИНА-ПРИРОДА
+		<nav class="nav"><a href="index.html" class="g">Головна<span class="navcapitan">Дослідження</span> ЛЮДИНА-ПРИРОДА
 			<div class="button">
 		<a href="index.html" class="y">Вирішення</a>
 		</div>
