--- a/2page.html
+++ b/2page.html
@@ -6,15 +6,17 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/2page.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;800&display=swap" rel="stylesheet">
 	<title>-I ЕКОЛОГІЯ I-</title>
 </head>
 <body>
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><a href="index.html" class="g">Головна<span class="navcapitan">Дослідження</span> ЛЮДИНА-ПРИРОДА
+		<nav class="nav"><a href="index.html" class="g">Головна</a><span class="navcapitan">Дослідження</span><a href="3page.html" class="g2">Людина-природа</a>
 			<div class="button">
-		<a href="index.html" class="y">Вирішення</a>
+		<a href="4page.html" class="y">Вирішення</a>
 		</div>
 		</nav>
 		<div>
@@ -29,23 +31,13 @@
 				<img class="elipse1" src="img/elipse.png">
 				<div class="problem1">
 					<p class="text1">Забруднення атмосфери</p>
-					<p class="level2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="level2">Один з основних типів антропогенного забруднення. Полягає у викиді в атмосферу хімічних речовин, твердих частинок і біологічних матеріалів, здатних викликати шкоду для людини та інших живих організмів. Часто ефект забруднювачів є непрямим та проявляється лише через тривалий час, наприклад, певні речовини здатні зменшувати товщину озонового шару, впливаючи таким чином на більшість земних екосистем.</p>
 				</div>
 			</div>
 				<div class="problems2">
 					<div class="problemo">
 				<p class="text2">Забруднення та виснаження водних ресурсів</p>
-				<p class="level3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="level3">ХХ ст. століття характеризується інтенсивним розвитком промисловості, транспорту, енергетики, індустріалізацією сільського господарства. Все це призвело до того, що антропогенний вплив на навколишнє середовище прийняв глобальний характер. Забруднення води здебільшого відбувається внаслідок скиду до неї промислових,побутових та сільськогосподарських відходів. В деяких водоймищах забруднення води настільки велике, що відбулася повна їх деградація як джерел водопостачання </p>
 				</div>
 					<img class="elipse2" src="img/elipse3.png"><div class="problem1">
 					</div>
@@ -54,51 +46,44 @@
 				<div class="problem4">
 					<img class="elipse1" src="img/elipse2.png">
 					<p class="text8">деградація грунту</p>
-					<p class="level9">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="level9">«Деградація земель» означає зниження чи втрату біологічної і економічної продуктивності і складної структури орних земель, що зволожуються дощем, зрошуваних орних земель чи пасовищ, лісів і лісистих ділянок у посушливих, напівпосушливих і сухих субгумідних районах внаслідок землекористування чи дії одного чи кількох процесів, у тому числі пов'язаних з діяльністю людини і структурами розселення, таких, як:
+вітрова чи водна ерозія ґрунтів;
+погіршення фізичних, хімічних і біологічних чи економічних властивостей ґрунтів;
+довготермінова втрата природного рослинного покриву.</p>
 				</div>
 			</div>
 				<div class="problems6">
 					<div class="problemo">
 				<p class="text2">Сміттєве забруднення</p>
-				<p class="level3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="level3">На сьогоднішній день сучасна людина споживає в рази більше, ніж його предки. Щороку обсяги споживання зростають, а разом з ними зростає і кількість відходів. В даний час проблема забруднення є не просто труднощами, це вже екологічна катастрофа глобального характеру, яку необхідно терміново вирішувати. Частина країн вже зробили певні кроки після усвідомлення всієї небезпеки забруднення побутовими відходами, але в більшості, на жаль, ситуація не змінюється.</p>
 				</div>
 					<img class="elipse2" src="img/elipse1.png"><div class="problem1">
 				</div>
 			</div>
 			<div class="a">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Забруднення атмосфери</h3>
+			<p class="a1">Запобігається чисельними фільтрами на промисловостях та в транспорті </p>
 			</div>
 			<div class="b">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Сміттєве забруднення</h3>
+			<p class="a1">Сртування сміття та виготовлення біо-розкладающих матеріалів</p>
 			</div>
 			<div class="c">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Виснаження водних ресурсів</h3>
+			<p class="a1">Відходи повинні перероблятись та направлятись в інші русла</p>
 			</div>
 				<img class="coronaklacific" src="img/2589628 1.png">
 				<div class="d">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Забруднення екології</h3>
+			<p class="a1">Відходи зараз переробляються до мінімального їх викиду</p>
 			</div>
 			<div class="b1">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Біо-матеріали</h3>
+			<p class="a1">Це матеріали які здатні на дуже швидке розкладання та перегнивання </p>
 			</div>
 			<div class="c1">
-			<h3 class="simple">Loremm Ipsum</h3>
-			<p class="a1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+			<h3 class="simple">Флеш-Моби</h3>
+			<p class="a1">Направлені на очишчення апарків та міських середовищ </p>
 			</div>
 		</main>
 	<footer class="footer">
