--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/1page.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;800&display=swap" rel="stylesheet">
 	<title>-I ЕКОЛОГІЯ I-</title>
 </head>
 <body>
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><span class="navcapitan">Головна</span> <a href="2page.html" class="g">дослідження</a> Людина-природа
+		<nav class="nav"><span class="navcapitan">Головна</span> <a href="2page.html" class="g">дослідження</a> <a href="3page.html" class="g">Людина-природа</a>
 			<div class="button">
-		<a href="index.html" class="y">Вирішення</a>
+		<a href="4page.html" class="y">Вирішення</a>
 		</div>
 		</nav>
 		<div>
@@ -33,8 +35,7 @@
 			</div>
 			<div class="col1">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. 
+					Проект показує повну картину того, як екологічні проблеми впливають на нас насправді.
 				</p>
 				<div class="vertline2"></div>
 			</div>
@@ -59,25 +60,11 @@
 		</div>
 		<div class="button1"><a href="index.html" class="y1">детальніше</a></div>
 		<div class="famous">
-				<div class="first"><img class="rec8" src="img/rectangle7.png"><p class="h10">Микола<p class="h10">Вернадський</p><div class="h14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></p>
+				<div class="first"><img class="rec8" src="img/rectangle7.png"><p class="h10">Микола<p class="h10">Вернадський</p><div class="h14">Вернадський був учнем В. В. Докучаєва, який першим почав комплексно досліджувати взаємозв'язок між рослинністю і ґрунтом, довівши, що останній є продуктом життєдіяльності рослин. Учень пішов ще далі. Саме його праця "Біосфера" , в якій розкрито геологічне значення живої речовини та її вплив на біогеохімічні процеси, перетворення енергії і на еволюцію планети, відобразила глобальні закони екології.</div></p></p>
 				</div>
-				<div class="first"><img class="rec8" src="img/rectangle9.png"><p class="h10">Нікола<p class="h10">Тесла</p><div class="h14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></p></div>
-				<div class="first"><img class="rec8" src="img/rectangle8.png"><p class="h10">Ілон<p class="h10">Маск</p></p><div class="h142">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></p></div>
+				<div class="first"><img class="rec8" src="img/rectangle9.png"><p class="h10">Нікола<p class="h10">Тесла</p><div class="h14">Нікола Тесла створив генератор змінного струму, опираючись на принципи обертання магнітних полів Землі, і тим самим надав людству можливість широкого використання електрики. ... Його лабораторію часто відвідував Марк Твен. Великий письменник допомагав Ніколі при демонстрації його винаходів.</div></p></p></div>
+				<div class="first"><img class="rec8" src="img/rectangle8.png"><p class="h10">Ілон<p class="h10">Маск</p></p><div class="h142">Ілон Маск став першим, хто зміг домогтися частково повторного використання ракетоносіїв. З їх допомогою доставляють різні вантажі на орбіту. Зазвичай паливні баки і прискорювачі від космічних носіїв або згорають в атмосфері Землі, або просто виявляються на дні океану. Ідея полягала в тому, щоб по-максимуму повторно використовувати ракету, тим самим зменшивши кількість відходів.
+</div></p></div>
 				<div class="first"><p class="h19">Відомі<p class="h19">Люди<div class="h9">Боротьба з екологічними проблемами</div></p></p></div>
 		</div>
 		</div>
