--- a/2page.html
+++ b/2page.html
@@ -14,7 +14,7 @@
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><a href="index.html" class="g">Головна</a><span class="navcapitan">Дослідження</span><a href="3page.html" class="g2">Людина-природа</a>
+		<nav class="nav"><a href="start.html" class="g">Головна</a><span class="navcapitan">Дослідження</span><a href="3page.html" class="g2">Людина-природа</a>
 			<div class="button">
 		<a href="4page.html" class="y">Вирішення</a>
 		</div>
