--- a/3page.html
+++ b/3page.html
@@ -14,7 +14,7 @@
 	<div class="header">
 		<div>
 		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><a href="index.html" class="g">Головна</a><a href="2page.html" class="a">Дослідження</a><span class="navcapitan">ЛЮДИНА-ПРИРОДА</span>
+		<nav class="nav"><a href="start.html" class="g">Головна</a><a href="2page.html" class="a">Дослідження</a><span class="navcapitan">ЛЮДИНА-ПРИРОДА</span>
 			<div class="button">
 		<a href="4page.html" class="y">Вирішення</a>
 		</div>
