--- a/index.html
+++ b/index.html
@@ -5,83 +5,19 @@
 	<link rel="shortcut icon" href="img/logo.png" type="image/png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/1page.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 	<title>-I ЕКОЛОГІЯ I-</title>
 </head>
 <body>
-	<div class="header">
-		<div>
-		 <img class="plant" src="img/plant_1.png">
-		<nav class="nav"><span class="navcapitan">Головна</span> <a href="2page.html" class="g">дослідження</a> <a href="3page.html" class="g">Людина-природа</a>
-			<div class="button">
-		<a href="4page.html" class="y">Вирішення</a>
-		</div>
-		</nav>
+	<div class="countainer">
+		<img class="plant" src="img/plant_1.png">
 		<div>
 		<p class="h3">Екологія</p>
 		<p class="h32">планети Земля</p>
 		</div>
-	</div>
-	</div>
-		<main class="main">
-			<div class="vertline"></div>
-		<div class="countainer">
-			<div class="col1"></div>
-			<div class="col1">
-				<p class="q">Про</p>
-				<p>Проект</p>
-			</div>
-			<div class="col1">
-				<p>
-					Проект показує повну картину того, як екологічні проблеми впливають на нас насправді.
-				</p>
-				<div class="vertline2"></div>
-			</div>
-			<div class="col1">
-				<p class="h4">Ми можемо</p>
-				<p class="h4">Зберегти</p>
-				<p class="h4">Нашу планету</p>
-			</div>
+		<div class="button">
+		<a href="start.html" class="y">Вперед</a>
 		</div>
-		<div class="onto">
-			<h3 class="h6">Онтологія відносин<p class="h7"> "людина-природа"</p></h3>
-			<div class="ontoline"></div>
-			<div class="ontoline2">
-				<div class="sircle1"></div>
-				<div class="sircle1"></div>
-				<div class="sircle1"></div>
-				<p class="first">450<p class="h10">Традиційне <p class="h10">суспільство</p></p></p>
-				<div class="do">
-				<p class="first">1820<p class="h10">Індустріальне <p class="h10">суспільство</p></p></p></div>
-				<div class="do2">
-				<p class="first">1980<p class="h10">Традиційне <p class="h10">суспільство</p></p></p></div>
-		</div>
-		<div class="button1"><a href="index.html" class="y1">детальніше</a></div>
-		<div class="famous">
-				<div class="first"><img class="rec8" src="img/rectangle7.png"><p class="h10">Микола<p class="h10">Вернадський</p><div class="h14">Вернадський був учнем В. В. Докучаєва, який першим почав комплексно досліджувати взаємозв'язок між рослинністю і ґрунтом, довівши, що останній є продуктом життєдіяльності рослин. Учень пішов ще далі. Саме його праця "Біосфера" , в якій розкрито геологічне значення живої речовини та її вплив на біогеохімічні процеси, перетворення енергії і на еволюцію планети, відобразила глобальні закони екології.</div></p></p>
-				</div>
-				<div class="first"><img class="rec8" src="img/rectangle9.png"><p class="h10">Нікола<p class="h10">Тесла</p><div class="h14">Нікола Тесла створив генератор змінного струму, опираючись на принципи обертання магнітних полів Землі, і тим самим надав людству можливість широкого використання електрики. ... Його лабораторію часто відвідував Марк Твен. Великий письменник допомагав Ніколі при демонстрації його винаходів.</div></p></p></div>
-				<div class="first"><img class="rec8" src="img/rectangle8.png"><p class="h10">Ілон<p class="h10">Маск</p></p><div class="h142">Ілон Маск став першим, хто зміг домогтися частково повторного використання ракетоносіїв. З їх допомогою доставляють різні вантажі на орбіту. Зазвичай паливні баки і прискорювачі від космічних носіїв або згорають в атмосфері Землі, або просто виявляються на дні океану. Ідея полягала в тому, щоб по-максимуму повторно використовувати ракету, тим самим зменшивши кількість відходів.
-</div></p></div>
-				<div class="first"><p class="h19">Відомі<p class="h19">Люди<div class="h9">Боротьба з екологічними проблемами</div></p></p></div>
-		</div>
-		</div>
-	</main>
 	</div>
-	<div class="mainpt2">
-		<h3 class="whyisit">Чому<span class="span1"> це</span><span class="span2"> так?</span></h3>
-		<div class="imag"><img class="imag" src="img/onder.png"></div>
-		<div class="imag"><img class="imag1" src="img/tttv.png"></div>
-	</div>
-	<footer class="footer">
-		<p class="footertext">
-		Екологія планети Земля
-		</p>
-		<div class="social">
-		<img class="teleg" src="img/telegram.png">
-		<img src="img/twitter.png">
-	</footer>
 </body>
 </html>
